# H62PEP-20114838

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  generateDocumentationAndDeploy.h  generateDocumentationAndDeploy.sh  git-cheat-sheet.txt  hi_and_date.cmd  index.html  last-commit.cmd
week2/: adder.cpp  adder.h  calc.cpp  hello.cpp
week2/calc_program/: calc.exL
week2/maths_library/include/: adder.h
worksheet4/hello_cmake/build2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  hello.cpp  hello.sln  hello.vcxproj  hello.vcxproj.filters
worksheet4/hello_cmake/calc_cmake/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  calc.cpp  cmake_install.cmake  hello.sln  hello.vcxproj  hello.vcxproj.filters
worksheet5.1/hello_qt_cm/: CMakeLists.txt  hello_qt.cpp
worksheet5.1/qt_designer/: CMakeLists.txt  edititemdialog.cpp  edititemdialog.h  edititemdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  stockitem.cpp  stockitem.h  stockitemlistmodel.cpp  stockitemlistmodel.h
worksheet6/ex1/: Cmakelists.txt  vtk_cube.cpp
worksheet6/ex2/: mainwindow.cpp
worksheet6/ex3/: mainwindow.cpp  mainwindow.h  mainwindow.ui
worksheet6/ex3/Pyramid/: CmakeLists.txt
worksheet7/: CMakeLists.txt  Doxyfile  generateDocumentationAndDeploy.sh  maths.h  test1.cpp
worksheet8/: CMakeLists.txt  adder.cpp  adder.h  calc.cpp  maths.h
ws3/: adder.cpp
ws3/calc_dynamic/: adder.exp
ws3/calc_msvc/: adder.h  adder.lib
(+76 files in other folders)
